--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,11 @@ dependencies {
     implementation 'org.slf4j:slf4j-nop:2.0.17'
     //implementation 'ch.qos.logback:logback-classic:1.4.14'
 
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.5.0'
+    testImplementation 'org.assertj:assertj-core:3.24.2'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
 }
 
 test {
