Added Text Similarity Ranker

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     implementation "dev.langchain4j:langchain4j-google-ai-gemini:${lc4jVersion}"
     implementation "dev.langchain4j:langchain4j-anthropic:${lc4jVersion}"
     implementation "dev.langchain4j:langchain4j-mistral-ai:${lc4jVersion}"
+    implementation 'dev.langchain4j:langchain4j-ollama:0.33.0'
 
     implementation("dev.langchain4j:langchain4j-document-parser-apache-pdfbox:1.4.0-beta10") // PDF → text
 
